# toy-app

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  load_init_migrations.sql  nginx.conf
src/: auth.rs  common.rs  errors.rs  main.rs  models.rs  routes.rs  users.rs
static/: styles.css
templates/: base.html  home.html
ui/: home.html  index.html  main.html  styles.css
