[package]
name = "storage_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "form"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8", features = ["uuid", "runtime-tokio", "postgres" ] }
serde = { version = "1.0.218", features = ["derive"] }
dotenv = "0.15.0"
tower-http = { version = "0.6.2", features = ["auth", "compression-br", "cors", "fs"] }
tower = "0.5.2"
axum-extra = { version = "0.10.1", features = ["cookie"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
time = "0.3.41"
