[package]
name = "toy-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "form"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8", features = ["uuid", "runtime-tokio", "postgres" ] }
serde = { version = "1.0.218", features = ["derive"] }
dotenv = "0.15.0"
tower-http = { version = "0.6.2", features = ["auth", "compression-br", "cors", "fs", "trace"] }
tower = "0.5.2"
axum-extra = { version = "0.10.1", features = ["cookie"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
time = "0.3.41"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
chrono = "0.4.42"
async-trait = { version = "0.1.89", features = [] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
url = { version = "2", features = ["serde"] }
minijinja = { version = "2.14.0", features = ["loader"]}

[lints.clippy]
unwrap_used = "deny"
# adapted from https://corrode.dev/blog/defensive-programming/#clippy-lints-for-defensive-programming
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
